variables.Variables.scala.error
Erreur de compilation :
Variables:8: error: value ++ is not a member of Int
      c++
       ^Variables:11: error: value -- is not a member of Int
      c--
       ^Variables:17: error: value && is not a member of Int
  if(c = 0 && porteBiscuit()){
           ^Variables:17: error: type mismatch;
 found   : Unit
 required: Boolean
  if(c = 0 && porteBiscuit()){
       ^